refactor: change fonts

--- a/index.html
+++ b/index.html
@@ -6,9 +6,9 @@
   <title>JohnEmerson1406's Profile - MyAnimeList</title>
 
   <link href="https://fonts.googleapis.com/css2?family=Rancho&display=swap" rel="stylesheet">
-  <link href="https://fonts.googleapis.com/css2?family=Sriracha&display=swap" rel="stylesheet">
-  <link href="https://fonts.googleapis.com/css2?family=Mitr&display=swap" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css2?family=Pacifico&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Mitr&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Ubuntu&display=swap" rel="stylesheet">
 
   <link rel="stylesheet" href="style.css">
 
@@ -49,9 +49,9 @@
           vivo no Piauí e por enquanto curso Análise
           e Desenvolvimento de Sistemas no IFPI.
           Quando não estou estudando, gosto de passar
-          meu tempo assistindo animes, doramas,
-          jogando League of Legends ou Fate/Grand
-          Order.
+          meu tempo assistindo animes e doramas,
+          jogando League of Legends ou farmando evento
+          em Fate/Grand Order.
           <br><br>
           O gênero de anime que mais gosto é romance,
           mas ainda curto ação, drama e comédia
@@ -62,7 +62,7 @@
           pequena resenha sobre o que achei de
           cada anime.
           <br><br>
-          Este perfil foi feito 100% em
+          Esse perfil foi feito 100% em
           HTML e CSS, e você pode encontrar o código
           no meu Github. É isso, seja bem-vindo!
         </p>
@@ -136,7 +136,7 @@
           </div>
           <div class="anime">
             <div class="anime-image" style="background-image: url('https://s4.anilist.co/file/anilistcdn/media/anime/cover/large/bx20966-HboUtUzEKWl6.jpg');"></div>
-            <div class="anime-title">Yamada-kun and the Seven Witches</div>
+            <div class="anime-title">Yamada-kun and the 7 Witches</div>
           </div>
           <div class="anime">
             <div class="anime-image" style="background-image: url('https://s4.anilist.co/file/anilistcdn/media/anime/cover/medium/b20792-lKfQMBo8qUaX.png');"></div>
@@ -157,7 +157,7 @@
             <div class="anime-title">Zatch Bell!</div>
           </div>
           <div class="anime">
-            <div class="anime-image" style="background-image: url('https://s4.anilist.co/file/anilistcdn/media/anime/cover/large/bx11285-d2swj9OH7Us4.jpg');"></div>
+            <div class="anime-image" style="background-image: url('https://cdn.myanimelist.net/images/anime/12/54331.jpg');"></div>
             <div class="anime-title">Black Rock Shooter</div>
           </div>
           <div class="anime">
