style: add font-weight to anime-title

--- a/index.html
+++ b/index.html
@@ -136,7 +136,7 @@
           </div>
           <div class="anime">
             <div class="anime-image" style="background-image: url('https://s4.anilist.co/file/anilistcdn/media/anime/cover/large/bx20966-HboUtUzEKWl6.jpg');"></div>
-            <div class="anime-title">Yamada-kun and the 7 Witches</div>
+            <div class="anime-title">Yamada-kun and the Seven Witches</div>
           </div>
           <div class="anime">
             <div class="anime-image" style="background-image: url('https://s4.anilist.co/file/anilistcdn/media/anime/cover/medium/b20792-lKfQMBo8qUaX.png');"></div>
