feat: add circle favorite characters

--- a/index.html
+++ b/index.html
@@ -132,45 +132,45 @@
         <div class="animes-row">
           <div class="anime">
             <div class="anime-image" style="background-image: url('https://s4.anilist.co/file/anilistcdn/media/anime/cover/large/bx21519-XIr3PeczUjjF.png');"></div>
-            <div class="anime-title">Your Name</div>
+            <div class="anime-name">Your Name</div>
           </div>
           <div class="anime">
             <div class="anime-image" style="background-image: url('https://s4.anilist.co/file/anilistcdn/media/anime/cover/large/bx20966-HboUtUzEKWl6.jpg');"></div>
-            <div class="anime-title">Yamada-kun and the Seven Witches</div>
+            <div class="anime-name">Yamada-kun and the Seven Witches</div>
           </div>
           <div class="anime">
             <div class="anime-image" style="background-image: url('https://s4.anilist.co/file/anilistcdn/media/anime/cover/medium/b20792-lKfQMBo8qUaX.png');"></div>
-            <div class="anime-title">Fate Unlimited Blade Works</div>
+            <div class="anime-name">Fate Unlimited Blade Works</div>
           </div>
           <div class="anime">
             <div class="anime-image" style="background-image: url('https://s4.anilist.co/file/anilistcdn/media/anime/cover/large/bx6702-4cW6E5AqQqqB.png');"></div>
-            <div class="anime-title">Fairy Tail</div>
+            <div class="anime-name">Fairy Tail</div>
           </div>
           <div class="anime">
             <div class="anime-image" style="background-image: url('https://s4.anilist.co/file/anilistcdn/media/anime/cover/large/bx20464-qUgDKxP8DC6q.png');"></div>
-            <div class="anime-title">Haikyuu!</div>
+            <div class="anime-name">Haikyuu!!</div>
           </div>
         </div>
         <div class="animes-row">
           <div class="anime">
-            <div class="anime-image" style="background-image: url('https://s4.anilist.co/file/anilistcdn/media/anime/cover/large/bx250-xiExsOFeQsnW.png');"></div>
-            <div class="anime-title">Zatch Bell!</div>
+            <div class="anime-image" style="background-image: url('https://s4.anilist.co/file/anilistcdn/media/anime/cover/large/nx11757-Q9P2zjCPICq5.jpg');"></div>
+            <div class="anime-name">Sword Art Online</div>
           </div>
           <div class="anime">
             <div class="anime-image" style="background-image: url('https://cdn.myanimelist.net/images/anime/12/54331.jpg');"></div>
-            <div class="anime-title">Black Rock Shooter</div>
+            <div class="anime-name">Black Rock Shooter</div>
           </div>
           <div class="anime">
             <div class="anime-image" style="background-image: url('https://s4.anilist.co/file/anilistcdn/media/anime/cover/large/bx16067-CFX0g435pLob.png');"></div>
-            <div class="anime-title">Nagi no Asukara</div>
+            <div class="anime-name">Nagi no Asukara</div>
           </div>
           <div class="anime">
             <div class="anime-image" style="background-image: url('https://s4.anilist.co/file/anilistcdn/media/anime/cover/large/bx21355-xsLpqMFkMQQk.png');"></div>
-            <div class="anime-title">Re:Zero</div>
+            <div class="anime-name">Re:Zero</div>
           </div>
           <div class="anime">
-            <div class="anime-image" style="background-image: url('https://s4.anilist.co/file/anilistcdn/media/anime/cover/large/bx105334-SCZAVd9fLWWN.jpg');"></div>
-            <div class="anime-title">Fruits Basket</div>
+            <div class="anime-image" style="background-image: url('https://pbs.twimg.com/media/Dt7Rd89XgAAxoUr.jpg');"></div>
+            <div class="anime-name">Fruits Basket</div>
           </div>
         </div>
       </div>
@@ -218,6 +218,53 @@
     <div class="favorite-characters">
       <div class="section-title">
         Favorite Characters
+      </div>
+
+      <div class="top-10-characters">
+        <div class="characters-row">
+          <div class="character">
+            <div class="character-image" style="background-image: url('');"></div>
+            <div class="character-name">Kirito</div>
+          </div>
+          <div class="character">
+            <div class="character-image" style="background-image: url('');"></div>
+            <div class="character-name">Erza</div>
+          </div>
+          <div class="character">
+            <div class="character-image" style="background-image: url('');"></div>
+            <div class="character-name">Black Rock Shooter</div>
+          </div>
+          <div class="character">
+            <div class="character-image" style="background-image: url('');"></div>
+            <div class="character-name">Gilgamesh</div>
+          </div>
+          <div class="character">
+            <div class="character-image" style="background-image: url('');"></div>
+            <div class="character-name">Urara Shiraishi</div>
+          </div>
+        </div>
+        <div class="characters-row">
+          <div class="character">
+            <div class="character-image" style="background-image: url('');"></div>
+            <div class="character-name">Kyou Souma</div>
+          </div>
+          <div class="character">
+            <div class="character-image" style="background-image: url('');"></div>
+            <div class="character-name">Archer</div>
+          </div>
+          <div class="character">
+            <div class="character-image" style="background-image: url('');"></div>
+            <div class="character-name">Senkuu</div>
+          </div>
+          <div class="character">
+            <div class="character-image" style="background-image: url('');"></div>
+            <div class="character-name">Lancer</div>
+          </div>
+          <div class="character">
+            <div class="character-image" style="background-image: url('');"></div>
+            <div class="character-name">Lucy Heartfilia</div>
+          </div>
+        </div>
       </div>
     </div>
   </div>
