feat: add my favorite characters with images

--- a/index.html
+++ b/index.html
@@ -223,46 +223,46 @@
       <div class="top-10-characters">
         <div class="characters-row">
           <div class="character">
-            <div class="character-image" style="background-image: url('');"></div>
-            <div class="character-name">Kirito</div>
-          </div>
-          <div class="character">
-            <div class="character-image" style="background-image: url('');"></div>
-            <div class="character-name">Erza</div>
-          </div>
-          <div class="character">
-            <div class="character-image" style="background-image: url('');"></div>
+            <div class="character-image" style="background-image: url('https://s4.anilist.co/file/anilistcdn/character/large/19706.jpg');"></div>
             <div class="character-name">Black Rock Shooter</div>
           </div>
           <div class="character">
-            <div class="character-image" style="background-image: url('');"></div>
-            <div class="character-name">Gilgamesh</div>
+            <div class="character-image" style="background-image: url('https://s4.anilist.co/file/anilistcdn/character/large/b36765-IiYQh788PtKs.png');"></div>
+            <div class="character-name">Kirito</div>
           </div>
           <div class="character">
-            <div class="character-image" style="background-image: url('');"></div>
-            <div class="character-name">Urara Shiraishi</div>
+            <div class="character-image" style="background-image: url('https://s4.anilist.co/file/anilistcdn/character/large/n5189-QMlH3DM6eyEp.jpg');"></div>
+            <div class="character-name">Erza</div>
+          </div>
+          <div class="character">
+            <div class="character-image" style="background-image: url('https://i.ytimg.com/vi/_0i_3qeMhBQ/maxresdefault.jpg');"></div>
+            <div class="character-name">Senkuu</div>
+          </div>
+          <div class="character">
+            <div class="character-image" style="background-image: url('https://cdn.myanimelist.net/images/characters/12/338672.jpg');"></div>
+            <div class="character-name">Gilgamesh</div>
           </div>
         </div>
         <div class="characters-row">
           <div class="character">
-            <div class="character-image" style="background-image: url('');"></div>
-            <div class="character-name">Kyou Souma</div>
+            <div class="character-image" style="background-image: url('https://media.tenor.com/images/5e992d70fc5d315c8268b52682fd6044/tenor.png');"></div>
+            <div class="character-name">Lucy Heartfilia</div>
           </div>
           <div class="character">
-            <div class="character-image" style="background-image: url('');"></div>
+            <div class="character-image" style="background-image: url('https://user-images.githubusercontent.com/43749971/90322138-d3991e00-df26-11ea-9550-000d50a9b89b.jpg');"></div>
             <div class="character-name">Archer</div>
           </div>
           <div class="character">
-            <div class="character-image" style="background-image: url('');"></div>
-            <div class="character-name">Senkuu</div>
+            <div class="character-image" style="background-image: url('https://cdn.myanimelist.net/images/characters/7/281783.jpg');"></div>
+            <div class="character-name">Urara Shiraishi</div>
           </div>
           <div class="character">
-            <div class="character-image" style="background-image: url('');"></div>
-            <div class="character-name">Lancer</div>
+            <div class="character-image" style="background-image: url('https://s4.anilist.co/file/anilistcdn/character/large/b209-2l2rbKioenRL.png');"></div>
+            <div class="character-name">Kyou Souma</div>
           </div>
           <div class="character">
-            <div class="character-image" style="background-image: url('');"></div>
-            <div class="character-name">Lucy Heartfilia</div>
+            <div class="character-image" style="background-image: url('https://cdn.myanimelist.net/images/characters/11/280846.jpg');"></div>
+            <div class="character-name">Cú Chulainn</div>
           </div>
         </div>
       </div>
