--- a/index.html
+++ b/index.html
@@ -333,7 +333,7 @@
           </div>
           <div class="opening">
             <div class="opening-image" style="background-image: url('https://i.ytimg.com/vi/POJJ0giy4UI/maxresdefault.jpg');"></div>
-            <div class="opening-anime">Haikyuu!! Season 3</div>
+            <div class="opening-anime">Haikyuu!!</div>
             <div class="opening-name">Hikari Are</div>
           </div>
         </div>
@@ -344,9 +344,141 @@
             <div class="opening-name">Re:Re:</div>
           </div>
           <div class="opening">
+            <div class="opening-image" style="background-image: url('https://1.bp.blogspot.com/-hT58bwTwZsA/W845ABwQwmI/AAAAAAAAA_w/qtAkbfQcH00B0asoaKaP95WYiiL3cZijwCLcBGAs/s1600/SAO%2B1%2BOP01.jpg');"></div>
+            <div class="opening-anime">Sword Art Online</div>
+            <div class="opening-name">Crossing Field</div>
+          </div>
+        </div>
+        <div class="openings-row">
+          <div class="opening">
             <div class="opening-image" style="background-image: url('https://i.ytimg.com/vi/57SM-sub_-s/hqdefault.jpg');"></div>
             <div class="opening-anime">Black Clover</div>
             <div class="opening-name">Black Catcher</div>
+          </div>
+          <div class="opening">
+            <div class="opening-image" style="background-image: url('https://i.pinimg.com/originals/ff/b2/e1/ffb2e1e80d6f6468ee96b09c933f6ae3.jpg');"></div>
+            <div class="opening-anime">Fairy Tail</div>
+            <div class="opening-name">Masayume Chasing</div>
+          </div>
+        </div>
+        <div class="openings-row">
+          <div class="opening">
+            <div class="opening-image" style="background-image: url('https://images8.alphacoders.com/104/1046436.jpg');"></div>
+            <div class="opening-anime">Dr. Stone</div>
+            <div class="opening-name">Sangenshoku</div>
+          </div>
+          <div class="opening">
+            <div class="opening-image" style="background-image: url('https://user-images.githubusercontent.com/43749971/90344604-87ff7680-dff1-11ea-8649-894c2cffbe92.png');"></div>
+            <div class="opening-anime">Code Geass</div>
+            <div class="opening-name">Colors</div>
+          </div>
+        </div>
+      </div>
+    </div>
+
+    <div class="section-banner" style="background-position: center; background-image: url('https://pbs.twimg.com/media/EcSBkYIX0AMtnzC.jpg');">
+
+      <div class="wave-invert-3">
+        <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320">
+          <path fill="var(--color-primary-dark)" fill-opacity="1" d="M0,256L80,245.3C160,235,320,213,480,224C640,235,800,277,960,282.7C1120,288,1280,256,1360,240L1440,224L1440,0L1360,0C1280,0,1120,0,960,0C800,0,640,0,480,0C320,0,160,0,80,0L0,0Z"></path>
+        </svg>
+      </div>
+
+      <div class="wave-invert-2">
+        <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320">
+          <path fill="var(--color-primary)" fill-opacity="1" d="M0,256L80,245.3C160,235,320,213,480,224C640,235,800,277,960,282.7C1120,288,1280,256,1360,240L1440,224L1440,0L1360,0C1280,0,1120,0,960,0C800,0,640,0,480,0C320,0,160,0,80,0L0,0Z"></path>
+        </svg>
+      </div>
+
+      <div class="wave-invert-1">
+        <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320">
+          <path fill="var(--color-primary-light)" fill-opacity="1" d="M0,256L80,245.3C160,235,320,213,480,224C640,235,800,277,960,282.7C1120,288,1280,256,1360,240L1440,224L1440,0L1360,0C1280,0,1120,0,960,0C800,0,640,0,480,0C320,0,160,0,80,0L0,0Z"></path>
+        </svg>
+      </div>
+
+      <div class="wave-1">
+        <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320">
+          <path fill="var(--color-primary-dark)" fill-opacity="1" d="M0,256L80,245.3C160,235,320,213,480,224C640,235,800,277,960,282.7C1120,288,1280,256,1360,240L1440,224L1440,320L1360,320C1280,320,1120,320,960,320C800,320,640,320,480,320C320,320,160,320,80,320L0,320Z"></path>
+        </svg>
+      </div>
+      <div class="wave-2">
+        <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320">
+          <path fill="var(--color-primary)" fill-opacity="1" d="M0,256L80,245.3C160,235,320,213,480,224C640,235,800,277,960,282.7C1120,288,1280,256,1360,240L1440,224L1440,320L1360,320C1280,320,1120,320,960,320C800,320,640,320,480,320C320,320,160,320,80,320L0,320Z"></path>
+        </svg>
+      </div>
+      <div class="wave-3">
+        <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320">
+          <path fill="var(--color-primary-light)" fill-opacity="1" d="M0,256L80,245.3C160,235,320,213,480,224C640,235,800,277,960,282.7C1120,288,1280,256,1360,240L1440,224L1440,320L1360,320C1280,320,1120,320,960,320C800,320,640,320,480,320C320,320,160,320,80,320L0,320Z"></path>
+        </svg>
+      </div>
+    </div>
+
+    <div class="wave-fill"></div>
+
+    <div class="favorite-endings">
+      <div class="section-title">
+        Favorite Endings
+      </div>
+
+      <div class="top-10-endings">
+        <div class="endings-row">
+          <div class="ending">
+            <div class="ending-image" style="background-image: url('https://i.pinimg.com/originals/88/7d/d4/887dd496e1b3d20c4cffa43366dfa3ac.jpg');"></div>
+            <div class="ending-anime">Fate Unlimited Blade Works</div>
+            <div class="ending-name">Brave Shine</div>
+          </div>
+          <div class="ending">
+            <div class="ending-image" style="background-image: url('https://i.pinimg.com/originals/15/c8/0e/15c80e3e77dba68ceaa56e51e5629f4d.jpg');"></div>
+            <div class="ending-anime">Yamada-kun and the Seven Witches</div>
+            <div class="ending-name">Kuchizuke Diamond</div>
+          </div>
+        </div>
+        <div class="endings-row">
+          <div class="ending">
+            <div class="ending-image" style="background-image: url('https://i.imgur.com/VRZKozU.png');"></div>
+            <div class="ending-anime">Nagi no Asukara</div>
+            <div class="ending-name">Ebb and flow</div>
+          </div>
+          <div class="ending">
+            <div class="ending-image" style="background-image: url('https://i.ytimg.com/vi/POJJ0giy4UI/maxresdefault.jpg');"></div>
+            <div class="ending-anime">Haikyuu!!</div>
+            <div class="ending-name">Hikari Are</div>
+          </div>
+        </div>
+        <div class="endings-row">
+          <div class="ending">
+            <div class="ending-image" style="background-image: url('https://i.ytimg.com/vi/03jN5Llxr6k/maxresdefault.jpg');"></div>
+            <div class="ending-anime">Boku Dake ga Inai Machi</div>
+            <div class="ending-name">Re:Re:</div>
+          </div>
+          <div class="ending">
+            <div class="ending-image" style="background-image: url('https://1.bp.blogspot.com/-hT58bwTwZsA/W845ABwQwmI/AAAAAAAAA_w/qtAkbfQcH00B0asoaKaP95WYiiL3cZijwCLcBGAs/s1600/SAO%2B1%2BOP01.jpg');"></div>
+            <div class="ending-anime">Sword Art Online</div>
+            <div class="ending-name">Crossing Field</div>
+          </div>
+        </div>
+        <div class="endings-row">
+          <div class="ending">
+            <div class="ending-image" style="background-image: url('https://i.ytimg.com/vi/57SM-sub_-s/hqdefault.jpg');"></div>
+            <div class="ending-anime">Black Clover</div>
+            <div class="ending-name">Black Catcher</div>
+          </div>
+          <div class="ending">
+            <div class="ending-image" style="background-image: url('https://i.pinimg.com/originals/ff/b2/e1/ffb2e1e80d6f6468ee96b09c933f6ae3.jpg');"></div>
+            <div class="ending-anime">Fairy Tail</div>
+            <div class="ending-name">Masayume Chasing</div>
+          </div>
+        </div>
+        <div class="endings-row">
+          <div class="ending">
+            <div class="ending-image" style="background-image: url('https://images8.alphacoders.com/104/1046436.jpg');"></div>
+            <div class="ending-anime">Dr. Stone</div>
+            <div class="ending-name">Sangenshoku</div>
+          </div>
+          <div class="ending">
+            <div class="ending-image" style="background-image: url('https://user-images.githubusercontent.com/43749971/90344604-87ff7680-dff1-11ea-8649-894c2cffbe92.png');"></div>
+            <div class="ending-anime">Code Geass</div>
+            <div class="ending-name">Colors</div>
           </div>
         </div>
       </div>
