refactor: remove endings

--- a/index.html
+++ b/index.html
@@ -421,66 +421,7 @@
       </div>
 
       <div class="top-10-endings">
-        <div class="endings-row">
-          <div class="ending">
-            <div class="ending-image" style="background-image: url('https://i.pinimg.com/originals/88/7d/d4/887dd496e1b3d20c4cffa43366dfa3ac.jpg');"></div>
-            <div class="ending-anime">Fate Unlimited Blade Works</div>
-            <div class="ending-name">Brave Shine</div>
-          </div>
-          <div class="ending">
-            <div class="ending-image" style="background-image: url('https://i.pinimg.com/originals/15/c8/0e/15c80e3e77dba68ceaa56e51e5629f4d.jpg');"></div>
-            <div class="ending-anime">Yamada-kun and the Seven Witches</div>
-            <div class="ending-name">Kuchizuke Diamond</div>
-          </div>
-        </div>
-        <div class="endings-row">
-          <div class="ending">
-            <div class="ending-image" style="background-image: url('https://i.imgur.com/VRZKozU.png');"></div>
-            <div class="ending-anime">Nagi no Asukara</div>
-            <div class="ending-name">Ebb and flow</div>
-          </div>
-          <div class="ending">
-            <div class="ending-image" style="background-image: url('https://i.ytimg.com/vi/POJJ0giy4UI/maxresdefault.jpg');"></div>
-            <div class="ending-anime">Haikyuu!!</div>
-            <div class="ending-name">Hikari Are</div>
-          </div>
-        </div>
-        <div class="endings-row">
-          <div class="ending">
-            <div class="ending-image" style="background-image: url('https://i.ytimg.com/vi/03jN5Llxr6k/maxresdefault.jpg');"></div>
-            <div class="ending-anime">Boku Dake ga Inai Machi</div>
-            <div class="ending-name">Re:Re:</div>
-          </div>
-          <div class="ending">
-            <div class="ending-image" style="background-image: url('https://1.bp.blogspot.com/-hT58bwTwZsA/W845ABwQwmI/AAAAAAAAA_w/qtAkbfQcH00B0asoaKaP95WYiiL3cZijwCLcBGAs/s1600/SAO%2B1%2BOP01.jpg');"></div>
-            <div class="ending-anime">Sword Art Online</div>
-            <div class="ending-name">Crossing Field</div>
-          </div>
-        </div>
-        <div class="endings-row">
-          <div class="ending">
-            <div class="ending-image" style="background-image: url('https://i.ytimg.com/vi/57SM-sub_-s/hqdefault.jpg');"></div>
-            <div class="ending-anime">Black Clover</div>
-            <div class="ending-name">Black Catcher</div>
-          </div>
-          <div class="ending">
-            <div class="ending-image" style="background-image: url('https://i.pinimg.com/originals/ff/b2/e1/ffb2e1e80d6f6468ee96b09c933f6ae3.jpg');"></div>
-            <div class="ending-anime">Fairy Tail</div>
-            <div class="ending-name">Masayume Chasing</div>
-          </div>
-        </div>
-        <div class="endings-row">
-          <div class="ending">
-            <div class="ending-image" style="background-image: url('https://images8.alphacoders.com/104/1046436.jpg');"></div>
-            <div class="ending-anime">Dr. Stone</div>
-            <div class="ending-name">Sangenshoku</div>
-          </div>
-          <div class="ending">
-            <div class="ending-image" style="background-image: url('https://user-images.githubusercontent.com/43749971/90344604-87ff7680-dff1-11ea-8649-894c2cffbe92.png');"></div>
-            <div class="ending-anime">Code Geass</div>
-            <div class="ending-name">Colors</div>
-          </div>
-        </div>
+        <!-- todo -->
       </div>
     </div>
   </div>
