--- a/index.html
+++ b/index.html
@@ -424,8 +424,71 @@
         Favorite Endings
       </div>
 
+      <div class="link-alert">
+        Clique na imagem para assistir
+      </div>
+
       <div class="top-10-endings">
-        <!-- todo -->
+        <div class="endings-row">
+          <a class="ending" href="https://www.youtube.com/watch?v=7AWwQxmMu6k" target="_blank">
+            <div class="ending-image" style="background-image: url('https://user-images.githubusercontent.com/43749971/90419973-b763c100-e08d-11ea-99b2-86ca202cb50f.jpg');"></div>
+            <div class="ending-anime">Sword Art Online</div>
+            <div class="ending-name">Yume Sekai</div>
+          </a>
+          <a class="ending" href="https://www.youtube.com/watch?v=nwl6Polwq4Q" target="_blank">
+            <div class="ending-image" style="background-image: url('https://3.bp.blogspot.com/-PD6J9Q5yNEw/UpFfHlgy7yI/AAAAAAAAAJ8/mRRetA2XpfE/s1600/Kyokai+no+Kanata+Ending.mp4_snapshot_00.31_%5B2013.11.23_17.02.05%5D.jpg');"></div>
+            <div class="ending-anime">Kyoukai no Kanata</div>
+            <div class="ending-name">Daisy</div>
+          </a>
+        </div>
+        <div class="endings-row">
+          <a class="ending" href="https://www.youtube.com/watch?v=YMMAqoQ9bEY" target="_blank">
+            <div class="ending-image" style="background-image: url('https://i.ytimg.com/vi/nJNnWCyltMg/maxresdefault.jpg');"></div>
+            <div class="ending-anime">Fruits Basket</div>
+            <div class="ending-name">One Step Closer</div>
+          </a>
+          <a class="ending" href="https://www.youtube.com/watch?v=aATPWZ-FpJ8" target="_blank">
+            <div class="ending-image" style="background-image: url('https://thumbs.gfycat.com/MedicalDisguisedAfricanpiedkingfisher-mobile.jpg');"></div>
+            <div class="ending-anime">Dr. Stone</div>
+            <div class="ending-name">Life</div>
+          </a>
+        </div>
+        <div class="endings-row">
+          <a class="ending" href="https://www.youtube.com/watch?v=b5Nud2MMRo4" target="_blank">
+            <div class="ending-image" style="background-image: url('https://plsnohate.files.wordpress.com/2016/12/untitled.png?w=740');"></div>
+            <div class="ending-anime">Re:Zero</div>
+            <div class="ending-name">Stay Alive</div>
+          </a>
+          <a class="ending" href="https://www.youtube.com/watch?v=lpUjrMxBX2E" target="_blank">
+            <div class="ending-image" style="background-image: url('https://i.ytimg.com/vi/oyNl9CAgUWo/maxresdefault.jpg');"></div>
+            <div class="ending-anime">Black Clover</div>
+            <div class="ending-name">New Page</div>
+          </a>
+        </div>
+        <div class="endings-row">
+          <a class="ending" href="https://www.youtube.com/watch?v=1cYE0Bm5VKI" target="_blank">
+            <div class="ending-image" style="background-image: url('https://xenodude.files.wordpress.com/2019/08/vinland-saga-ed-1-3.png?w=700&h=');"></div>
+            <div class="ending-anime">Vinland Saga</div>
+            <div class="ending-name">Torches</div>
+          </a>
+          <a class="ending" href="https://vimeo.com/251053258" target="_blank">
+            <div class="ending-image" style="background-image: url('https://vignette.wikia.nocookie.net/fairytail/images/7/77/Ending_2.png/revision/latest?cb=20150403093718&path-prefix=es');"></div>
+            <div class="ending-anime">Fairy Tail</div>
+            <div class="ending-name">Tsuioku Merry-Go-Round</div>
+          </a>
+        </div>
+        <div class="endings-row">
+          <a class="ending" href="https://www.youtube.com/watch?v=4HwM9PAxb1k" target="_blank">
+            <div class="ending-image" style="background-image: url('https://i.ytimg.com/vi/4HwM9PAxb1k/maxresdefault.jpg');"></div>
+            <div class="ending-anime">Fate/Grand Order: Babylonia</div>
+            <div class="ending-name">Prover</div>
+          </a>
+          <a class="ending" href="https://www.youtube.com/watch?v=xi2cefj5pOU" target="_blank">
+            <div class="ending-image" style="background-image: url('https://i.pinimg.com/originals/22/e6/cf/22e6cf13599979b7a0d8a931efe84e05.jpg');"></div>
+            <div class="ending-anime">Fruits Basket</div>
+            <div class="ending-name">Eden</div>
+          </a>
+        </div>
       </div>
     </div>
   </div>
