refactor: add more padding to sections

--- a/index.html
+++ b/index.html
@@ -232,7 +232,7 @@
           </div>
           <div class="character">
             <div class="character-image" style="background-image: url('https://s4.anilist.co/file/anilistcdn/character/large/n5189-QMlH3DM6eyEp.jpg');"></div>
-            <div class="character-name">Erza</div>
+            <div class="character-name">Erza Scarlet</div>
           </div>
           <div class="character">
             <div class="character-image" style="background-image: url('https://i.ytimg.com/vi/_0i_3qeMhBQ/maxresdefault.jpg');"></div>
