--- a/index.html
+++ b/index.html
@@ -491,6 +491,53 @@
         </div>
       </div>
     </div>
+    
+    <div class="section-banner" style="background-position: center; background-image: url('https://i.pinimg.com/originals/bf/d1/d6/bfd1d6c5211dbba2369b64732b5d3a6a.png');">
+
+      <div class="wave-invert-3">
+        <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320">
+          <path fill="var(--color-primary-dark)" fill-opacity="1" d="M0,256L80,245.3C160,235,320,213,480,224C640,235,800,277,960,282.7C1120,288,1280,256,1360,240L1440,224L1440,0L1360,0C1280,0,1120,0,960,0C800,0,640,0,480,0C320,0,160,0,80,0L0,0Z"></path>
+        </svg>
+      </div>
+
+      <div class="wave-invert-2">
+        <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320">
+          <path fill="var(--color-primary)" fill-opacity="1" d="M0,256L80,245.3C160,235,320,213,480,224C640,235,800,277,960,282.7C1120,288,1280,256,1360,240L1440,224L1440,0L1360,0C1280,0,1120,0,960,0C800,0,640,0,480,0C320,0,160,0,80,0L0,0Z"></path>
+        </svg>
+      </div>
+
+      <div class="wave-invert-1">
+        <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320">
+          <path fill="var(--color-primary-light)" fill-opacity="1" d="M0,256L80,245.3C160,235,320,213,480,224C640,235,800,277,960,282.7C1120,288,1280,256,1360,240L1440,224L1440,0L1360,0C1280,0,1120,0,960,0C800,0,640,0,480,0C320,0,160,0,80,0L0,0Z"></path>
+        </svg>
+      </div>
+
+      <div class="wave-1">
+        <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320">
+          <path fill="var(--color-primary-dark)" fill-opacity="1" d="M0,256L80,245.3C160,235,320,213,480,224C640,235,800,277,960,282.7C1120,288,1280,256,1360,240L1440,224L1440,320L1360,320C1280,320,1120,320,960,320C800,320,640,320,480,320C320,320,160,320,80,320L0,320Z"></path>
+        </svg>
+      </div>
+      <div class="wave-2">
+        <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320">
+          <path fill="var(--color-primary)" fill-opacity="1" d="M0,256L80,245.3C160,235,320,213,480,224C640,235,800,277,960,282.7C1120,288,1280,256,1360,240L1440,224L1440,320L1360,320C1280,320,1120,320,960,320C800,320,640,320,480,320C320,320,160,320,80,320L0,320Z"></path>
+        </svg>
+      </div>
+      <div class="wave-3">
+        <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320">
+          <path fill="var(--color-primary-light)" fill-opacity="1" d="M0,256L80,245.3C160,235,320,213,480,224C640,235,800,277,960,282.7C1120,288,1280,256,1360,240L1440,224L1440,320L1360,320C1280,320,1120,320,960,320C800,320,640,320,480,320C320,320,160,320,80,320L0,320Z"></path>
+        </svg>
+      </div>
+    </div>
+
+    <div class="wave-fill"></div>
+
+    <div class="vocaloid">
+      <div class="section-title">
+        Vocaloid
+      </div>
+
+      
+    </div>
   </div>
 </body>
 </html>
