refactor: change thanks banner

--- a/index.html
+++ b/index.html
@@ -492,7 +492,7 @@
       </div>
     </div>
     
-    <div class="section-banner" style="background-position: center; background-image: url('https://i.pinimg.com/originals/bf/d1/d6/bfd1d6c5211dbba2369b64732b5d3a6a.png');">
+    <div class="section-banner" style="background-position: center; background-image: url('https://images8.alphacoders.com/524/524092.jpg');">
 
       <div class="wave-invert-3">
         <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320">
@@ -533,7 +533,7 @@
 
     <div class="vocaloid">
       <div class="section-title">
-        Vocaloid
+        Vocaloids
       </div>
 
       <div class="favorite">
@@ -599,7 +599,7 @@
 
     </div>
 
-    <div class="section-banner" style="background-position: center; background-image: url('https://i.imgur.com/f13aKaD.jpg');">
+    <div class="thanks-banner" style="background-position: center; background-image: url('https://community.gamepress.gg/uploads/default/original/4X/0/6/3/06388d2951f62db296c618a44fce58ef609d8f08.jpeg');">
 
       <div class="wave-invert-3">
         <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320">
