refactor:  favorite characters

--- a/index.html
+++ b/index.html
@@ -220,7 +220,7 @@
         Favorite Characters
       </div>
 
-      <div class="top-10-characters">
+      <div class="top-characters">
         <div class="characters-row">
           <div class="character">
             <div class="character-image" style="background-image: url('https://s4.anilist.co/file/anilistcdn/character/large/19706.jpg');"></div>
@@ -239,17 +239,17 @@
             <div class="character-name">Senkuu</div>
           </div>
           <div class="character">
-            <div class="character-image" style="background-image: url('https://cdn.myanimelist.net/images/characters/12/338672.jpg');"></div>
+            <div class="character-image" style="background-image: url('https://i.imgur.com/AfuEz5w.jpg');"></div>
             <div class="character-name">Gilgamesh</div>
           </div>
         </div>
         <div class="characters-row">
           <div class="character">
-            <div class="character-image" style="background-image: url('https://media.tenor.com/images/5e992d70fc5d315c8268b52682fd6044/tenor.png');"></div>
+            <div class="character-image" style="background-image: url('https://i.pinimg.com/474x/3f/d9/e3/3fd9e31c4eee6f4e2027b2460e91495b.jpg');"></div>
             <div class="character-name">Lucy Heartfilia</div>
           </div>
           <div class="character">
-            <div class="character-image" style="background-image: url('https://user-images.githubusercontent.com/43749971/90322138-d3991e00-df26-11ea-9550-000d50a9b89b.jpg');"></div>
+            <div class="character-image" style="background-image: url('https://vignette.wikia.nocookie.net/typemoon/images/c/c1/Archer_EMIYA.jpeg/revision/latest/top-crop/width/220/height/220?cb=20150630040614');"></div>
             <div class="character-name">Archer</div>
           </div>
           <div class="character">
@@ -261,8 +261,30 @@
             <div class="character-name">Kyou Souma</div>
           </div>
           <div class="character">
-            <div class="character-image" style="background-image: url('https://cdn.myanimelist.net/images/characters/11/280846.jpg');"></div>
+            <div class="character-image" style="background-image: url('https://i.imgur.com/sHqIRtV.jpg');"></div>
             <div class="character-name">Cú Chulainn</div>
+          </div>
+        </div>
+        <div class="characters-row">
+          <div class="character">
+            <div class="character-image" style="background-image: url('https://i.pinimg.com/originals/a9/19/76/a919765f9da80a849df4333436527624.png');"></div>
+            <div class="character-name">Izuku Midoriya</div>
+          </div>
+          <div class="character">
+            <div class="character-image" style="background-image: url('https://cdn.myanimelist.net/images/characters/8/312444.jpg');"></div>
+            <div class="character-name">Rin Toosaka</div>
+          </div>
+          <div class="character">
+            <div class="character-image" style="background-image: url('https://cdn.myanimelist.net/images/characters/5/311914.jpg');"></div>
+            <div class="character-name">Shouyou Hinata</div>
+          </div>
+          <div class="character">
+            <div class="character-image" style="background-image: url('https://i.imgur.com/RIDCXmK.jpg');"></div>
+            <div class="character-name">Anos Voldigoad</div>
+          </div>
+          <div class="character">
+            <div class="character-image" style="background-image: url('https://cdn.myanimelist.net/images/characters/10/366892.jpg');"></div>
+            <div class="character-name">Rimuru Tempest</div>
           </div>
         </div>
       </div>
