refactor: change images

--- a/index.html
+++ b/index.html
@@ -402,7 +402,7 @@
       </div>
     </div>
 
-    <div class="section-banner" style="background-position: center; background-image: url('https://pbs.twimg.com/media/EcSBkYIX0AMtnzC.jpg');">
+    <div class="section-banner" style="background-position: center; background-image: url('https://pbs.twimg.com/media/EcSBkYIX0AMtnzC.jpg:large');">
 
       <div class="wave-invert-3">
         <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320">
@@ -458,7 +458,7 @@
             <div class="ending-name">Yume Sekai</div>
           </a>
           <a class="ending" href="https://www.youtube.com/watch?v=nwl6Polwq4Q" target="_blank">
-            <div class="ending-image" style="background-image: url('https://3.bp.blogspot.com/-PD6J9Q5yNEw/UpFfHlgy7yI/AAAAAAAAAJ8/mRRetA2XpfE/s1600/Kyokai+no+Kanata+Ending.mp4_snapshot_00.31_%5B2013.11.23_17.02.05%5D.jpg');"></div>
+            <div class="ending-image" style="background-image: url('https://koekara.files.wordpress.com/2014/02/kyoukai-ed.jpg?w=640&h=360');"></div>
             <div class="ending-anime">Kyoukai no Kanata</div>
             <div class="ending-name">Daisy</div>
           </a>
