feat: add favortie endings to bbcode

--- a/index.html
+++ b/index.html
@@ -457,7 +457,7 @@
             <div class="ending-anime">Sword Art Online</div>
             <div class="ending-name">Yume Sekai</div>
           </a>
-          <a class="ending" href="https://www.youtube.com/watch?v=nwl6Polwq4Q" target="_blank">
+          <a class="ending" href="https://www.youtube.com/watch?v=-rw5EkD3Z7I" target="_blank">
             <div class="ending-image" style="background-image: url('https://koekara.files.wordpress.com/2014/02/kyoukai-ed.jpg?w=640&h=360');"></div>
             <div class="ending-anime">Kyoukai no Kanata</div>
             <div class="ending-name">Daisy</div>
