feat: add vocaloid & thanks to bbcode

--- a/index.html
+++ b/index.html
@@ -614,7 +614,7 @@
           9. Juggernaut<br>
           10. Bless Your Breath<br>
         </div>
-        <a class="vocaloid-link-alert" href="https://www.youtube.com/watch?v=6hlADpxjj0s&list=PLYby8aDTh_a1UMu30HyP9sfR-6Csx2X9s&index=1" target="_blank">
+        <a class="vocaloid-link-alert" href="https://www.youtube.com/watch?v=6hlADpxjj0s&list=PLYby8aDTh_a1JHWp9q4Iv9Sry2XWYrHI1" target="_blank">
           Clique aqui para ouvir
         </a>
       </div>
