feat: add noelle

--- a/index.html
+++ b/index.html
@@ -279,8 +279,8 @@
             <div class="character-name">Shouyou Hinata</div>
           </div>
           <div class="character">
-            <div class="character-image" style="background-image: url('https://i.imgur.com/RIDCXmK.jpg');"></div>
-            <div class="character-name">Anos Voldigoad</div>
+            <div class="character-image" style="background-position: top; background-image: url('https://4.bp.blogspot.com/-YCsTCoAAV3c/WrY9W-arLvI/AAAAAAAAEDs/rceVa_G7qnoMJDlzatFx9mFOfCPBwvIxQCEwYBhgL/s1600/%255BKORIGENGI-SHIBUYA%255D%2BNOELLE%2BSILVA.jpg');"></div>
+            <div class="character-name">Noelle Silva</div>
           </div>
           <div class="character">
             <div class="character-image" style="background-image: url('https://cdn.myanimelist.net/images/characters/10/366892.jpg');"></div>
