change noelle, hinata and archer pics

--- a/index.html
+++ b/index.html
@@ -249,7 +249,7 @@
             <div class="character-name">Lucy Heartfilia</div>
           </div>
           <div class="character">
-            <div class="character-image" style="background-image: url('https://vignette.wikia.nocookie.net/typemoon/images/c/c1/Archer_EMIYA.jpeg/revision/latest/top-crop/width/220/height/220?cb=20150630040614');"></div>
+            <div class="character-image" style="background-image: url('https://statici.behindthevoiceactors.com/behindthevoiceactors/_img/chars/archer-fate-stay-night-unlimited-blade-works-5.2.jpg');"></div>
             <div class="character-name">Archer</div>
           </div>
           <div class="character">
@@ -275,11 +275,13 @@
             <div class="character-name">Rin Toosaka</div>
           </div>
           <div class="character">
-            <div class="character-image" style="background-image: url('https://cdn.myanimelist.net/images/characters/5/311914.jpg');"></div>
+            <div class="character-image" style="background-image: url('https://pbs.twimg.com/media/D32HK41X4AA6T19.jpg');"></div>
+            <!-- <div class="character-image" style="background-image: url('https://64.media.tumblr.com/6311fb8e7fff4dd9589766020a25467d/4a89a77ea69959dd-68/s400x600/c067eceec819b3a56b6905b68821fce59b723d88.jpg');"></div> -->
             <div class="character-name">Shouyou Hinata</div>
           </div>
           <div class="character">
-            <div class="character-image" style="background-position: top; background-image: url('https://4.bp.blogspot.com/-YCsTCoAAV3c/WrY9W-arLvI/AAAAAAAAEDs/rceVa_G7qnoMJDlzatFx9mFOfCPBwvIxQCEwYBhgL/s1600/%255BKORIGENGI-SHIBUYA%255D%2BNOELLE%2BSILVA.jpg');"></div>
+            <div class="character-image" style="background-position: right; background-image: url('https://i.pinimg.com/564x/f3/98/76/f398763c540a57500b39f7ffff68580d.jpg');"></div>
+            <!-- <div class="character-image" style="background-position: right; background-image: url('https://laverdadnoticias.com/__export/1600379666300/sites/laverdad/img/2020/09/17/black_clover_cosplayer_ensena_a_fanaticos_como_hacer_la_noelle_perfecta.jpg_1478076572.jpg');"></div> -->
             <div class="character-name">Noelle Silva</div>
           </div>
           <div class="character">
