change kirito picture

--- a/index.html
+++ b/index.html
@@ -227,7 +227,7 @@
             <div class="character-name">Black Rock Shooter</div>
           </div>
           <div class="character">
-            <div class="character-image" style="background-image: url('https://s4.anilist.co/file/anilistcdn/character/large/b36765-IiYQh788PtKs.png');"></div>
+            <div class="character-image" style="background-image: url('https://pbs.twimg.com/media/C5GqiNXUYAA0A8n.jpg:large');"></div>
             <div class="character-name">Kirito</div>
           </div>
           <div class="character">
