--- a/index.html
+++ b/index.html
@@ -393,7 +393,7 @@
             <div class="opening-anime">Dr. Stone</div>
             <div class="opening-name">Sangenshoku</div>
           </a>
-          <a class="opening" href="tel:86 99427-0606">
+          <a class="opening" href="https://www.youtube.com/watch?v=cZ7zQbMxm28" target="_blank">
             <div class="opening-image" style="background-image: url('https://user-images.githubusercontent.com/43749971/90344604-87ff7680-dff1-11ea-8649-894c2cffbe92.png');"></div>
             <div class="opening-anime">Code Geass</div>
             <div class="opening-name">Colors</div>
