--- a/index.html
+++ b/index.html
@@ -153,8 +153,8 @@
         </div>
         <div class="animes-row">
           <div class="anime">
-            <div class="anime-image" style="background-image: url('https://s4.anilist.co/file/anilistcdn/media/anime/cover/large/nx11757-Q9P2zjCPICq5.jpg');"></div>
-            <div class="anime-name">Sword Art Online</div>
+            <div class="anime-image" style="background-image: url('https://s4.anilist.co/file/anilistcdn/media/anime/cover/large/bx97940-bPydLjny8PUw.png');"></div>
+            <div class="anime-name">Black Clover</div>
           </div>
           <div class="anime">
             <div class="anime-image" style="background-image: url('https://cdn.myanimelist.net/images/anime/12/54331.jpg');"></div>
