--- a/index.html
+++ b/index.html
@@ -45,13 +45,12 @@
       <fieldset>
         <legend>About me</legend>
         <p>
-          Meu nome é John, tenho 20 anos,
+          Meu nome é John, tenho 21 anos,
           vivo no Piauí e por enquanto curso Análise
           e Desenvolvimento de Sistemas no IFPI.
           Quando não estou estudando, gosto de passar
-          meu tempo assistindo animes e doramas,
-          jogando League of Legends ou farmando evento
-          em Fate/Grand Order.
+          meu tempo assistindo animes e doramas, ou
+          jogando Genshin Impact.
           <br><br>
           O gênero de anime que mais gosto é romance,
           mas ainda curto ação, drama e comédia
