refactor: change fate to genshin

--- a/index.html
+++ b/index.html
@@ -70,8 +70,8 @@
 
     <div class="social">
       <div class="fate">
-        <img class="icon" src="https://pht.qoo-static.com/wHrGkRBiLxqTCUGbl6Y9qgS_OvVjY9vYb4VU1FjKWVuqood__K1m4IH_GpmrwneCrVY=w512" alt="fate">
-        203.253.068
+        <img class="icon" src="https://img.utdstc.com/icon/4d1/b37/4d1b37eb5bc4e9e64c5b840330d3c494a6f441b8db889b8bf957436e9793056e:200" alt="genshin">
+        600799201
       </div>
       <div class="instagram">
         <img class="icon" src="https://img.ibxk.com.br/2018/9/programas/8489305175940521.png" alt="instagram">
