refactor: change some images of characters

--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
     </div>
 
     <div class="social">
-      <div class="fate">
+      <div class="genshin">
         <img class="icon" src="https://img.utdstc.com/icon/4d1/b37/4d1b37eb5bc4e9e64c5b840330d3c494a6f441b8db889b8bf957436e9793056e:200" alt="genshin">
         600799201
       </div>
@@ -79,7 +79,7 @@
       </div>
       <div class="league">
         <img class="icon" src="https://img.ibxk.com.br/2019/07/26/26171514413327.jpg" alt="league">
-        C0RN0 FURI0S0
+        FUI PRO GENSHIN
       </div>
     </div>
 
@@ -222,7 +222,7 @@
       <div class="top-characters">
         <div class="characters-row">
           <div class="character">
-            <div class="character-image" style="background-image: url('https://s4.anilist.co/file/anilistcdn/character/large/19706.jpg');"></div>
+            <div class="character-image" style="background-image: url('https://images4.alphacoders.com/261/thumb-1920-261644.jpg');"></div>
             <div class="character-name">Black Rock Shooter</div>
           </div>
           <div class="character">
@@ -230,7 +230,7 @@
             <div class="character-name">Kirito</div>
           </div>
           <div class="character">
-            <div class="character-image" style="background-image: url('https://s4.anilist.co/file/anilistcdn/character/large/n5189-QMlH3DM6eyEp.jpg');"></div>
+            <div class="character-image" style="background-image: url('https://i.quotev.com/u/15/4/19/t/Mugshot_of_Erza.jpg');"></div>
             <div class="character-name">Erza Scarlet</div>
           </div>
           <div class="character">
@@ -248,19 +248,19 @@
             <div class="character-name">Lucy Heartfilia</div>
           </div>
           <div class="character">
-            <div class="character-image" style="background-image: url('https://statici.behindthevoiceactors.com/behindthevoiceactors/_img/chars/archer-fate-stay-night-unlimited-blade-works-5.2.jpg');"></div>
-            <div class="character-name">Archer</div>
+            <div class="character-image" style="background-image: url('https://art.ngfiles.com/thumbnails/2216000/2216974_full.webp?f1638393625');"></div>
+            <div class="character-name">Bojji</div>
           </div>
           <div class="character">
             <div class="character-image" style="background-image: url('https://cdn.myanimelist.net/images/characters/7/281783.jpg');"></div>
             <div class="character-name">Urara Shiraishi</div>
           </div>
           <div class="character">
-            <div class="character-image" style="background-image: url('https://s4.anilist.co/file/anilistcdn/character/large/b209-2l2rbKioenRL.png');"></div>
-            <div class="character-name">Kyou Souma</div>
+            <div class="character-image" style="background-image: url('https://avatarfiles.alphacoders.com/159/thumb-1920-159073.jpg');"></div>
+            <div class="character-name">Mash Kyrielight</div>
           </div>
           <div class="character">
-            <div class="character-image" style="background-image: url('https://i.imgur.com/sHqIRtV.jpg');"></div>
+            <div class="character-image" style="background-image: url('https://64.media.tumblr.com/599d38453700ee28fbac86befa0ea9fe/05a2577d70ea8869-dc/s640x960/2aace725429ab4f0316c5c59e60ec51388ca920f.png');"></div>
             <div class="character-name">Cú Chulainn</div>
           </div>
         </div>
@@ -274,15 +274,15 @@
             <div class="character-name">Rin Toosaka</div>
           </div>
           <div class="character">
-            <div class="character-image" style="background-image: url('https://pbs.twimg.com/media/D32HK41X4AA6T19.jpg');"></div>
+            <div class="character-image" style="background-image: url('https://i.pinimg.com/564x/bd/b3/b2/bdb3b25d39386b7c552375d01a12d19d.jpg');"></div>
             <div class="character-name">Shouyou Hinata</div>
           </div>
           <div class="character">
-            <div class="character-image" style="background-position: right; background-image: url('https://i.pinimg.com/564x/f3/98/76/f398763c540a57500b39f7ffff68580d.jpg');"></div>
+            <div class="character-image" style="background-position: right; background-image: url('https://i.pinimg.com/736x/2f/8e/98/2f8e98fb39ce739b9ac0c36c48ce8881.jpg');"></div>
             <div class="character-name">Noelle Silva</div>
           </div>
           <div class="character">
-            <div class="character-image" style="background-image: url('https://cdn.myanimelist.net/images/characters/10/366892.jpg');"></div>
+            <div class="character-image" style="background-image: url('https://i.pinimg.com/564x/cc/07/4d/cc074d294c418da3a627b9c22d777bd1.jpg');"></div>
             <div class="character-name">Rimuru Tempest</div>
           </div>
         </div>
