refactor: update endings

--- a/index.html
+++ b/index.html
@@ -401,7 +401,7 @@
       </div>
     </div>
 
-    <div class="section-banner" style="background-position: center; background-image: url('https://pbs.twimg.com/media/EcSBkYIX0AMtnzC.jpg:large');">
+    <div class="section-banner" style="background-position: center; background-image: url('http://i2.hdslb.com/bfs/archive/e9e368a312e0252d32d23991076378c75e853486.jpg');">
 
       <div class="wave-invert-3">
         <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320">
@@ -456,7 +456,7 @@
             <div class="ending-anime">Sword Art Online</div>
             <div class="ending-name">Yume Sekai</div>
           </a>
-          <a class="ending" href="https://www.youtube.com/watch?v=-rw5EkD3Z7I" target="_blank">
+          <a class="ending" href="https://youtu.be/RT0FEFcT54g" target="_blank">
             <div class="ending-image" style="background-image: url('https://koekara.files.wordpress.com/2014/02/kyoukai-ed.jpg?w=640&h=360');"></div>
             <div class="ending-anime">Kyoukai no Kanata</div>
             <div class="ending-name">Daisy</div>
@@ -487,20 +487,20 @@
           </a>
         </div>
         <div class="endings-row">
+          <a class="ending" href="https://youtu.be/Odv-zbpy-Y8" target="_blank">
+            <div class="ending-image" style="background-image: url('https://img.youtube.com/vi/Odv-zbpy-Y8/maxresdefault.jpg');"></div>
+            <div class="ending-anime">Ousama Ranking</div>
+            <div class="ending-name">Oz</div>
+          </a>
           <a class="ending" href="https://www.youtube.com/watch?v=1cYE0Bm5VKI" target="_blank">
             <div class="ending-image" style="background-image: url('https://xenodude.files.wordpress.com/2019/08/vinland-saga-ed-1-3.png?w=700&h=');"></div>
             <div class="ending-anime">Vinland Saga</div>
             <div class="ending-name">Torches</div>
           </a>
-          <a class="ending" href="https://vimeo.com/251053258" target="_blank">
-            <div class="ending-image" style="background-image: url('https://vignette.wikia.nocookie.net/fairytail/images/7/77/Ending_2.png/revision/latest?cb=20150403093718&path-prefix=es');"></div>
-            <div class="ending-anime">Fairy Tail</div>
-            <div class="ending-name">Tsuioku Merry-Go-Round</div>
-          </a>
         </div>
         <div class="endings-row">
-          <a class="ending" href="https://www.youtube.com/watch?v=4HwM9PAxb1k" target="_blank">
-            <div class="ending-image" style="background-image: url('https://i.ytimg.com/vi/4HwM9PAxb1k/maxresdefault.jpg');"></div>
+          <a class="ending" href="https://youtu.be/nrvfKYc9lcU" target="_blank">
+            <div class="ending-image" style="background-image: url('https://64.media.tumblr.com/148ab67f299c9fb65609c2cd0540685a/1291e6b30fdf9bf0-9d/s1280x1920/71761b4241a4e21fc8e9c1ea665a7a4fb4d57045.png');"></div>
             <div class="ending-anime">Fate/Grand Order: Babylonia</div>
             <div class="ending-name">Prover</div>
           </a>
