refactor: change bojji image

--- a/index.html
+++ b/index.html
@@ -175,7 +175,7 @@
       </div>
     </div>
 
-    <div class="section-banner" style="background-position: top; background-image: url('https://www.4gamer.net/games/000/G000000/20100828001/SS/010.jpg');">
+    <div class="section-banner" style="background-position: top; background-image: url('https://wallpaperaccess.com/full/103037.jpg');">
 
       <div class="wave-invert-3">
         <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320">
@@ -248,7 +248,7 @@
             <div class="character-name">Lucy Heartfilia</div>
           </div>
           <div class="character">
-            <div class="character-image" style="background-image: url('https://art.ngfiles.com/thumbnails/2216000/2216974_full.webp?f1638393625');"></div>
+            <div class="character-image" style="background-image: url('https://www.anime-planet.com/images/anime/covers/thumbs/18515.jpg');"></div>
             <div class="character-name">Bojji</div>
           </div>
           <div class="character">
